# haya

./: .clang-format  .clangd  .gitignore  AGENTS.md  CMakeLists.txt  Doxygen  README.md  sdkconfig  sdkconfig.defaults
main/: CMakeLists.txt  idf_component.yml  main.c
main/include/: main.h
main/include/application/netif/: impl.h  impl_types.h  impl_utils.h
main/include/application/ota/: impl.h  impl_types.h  impl_utils.h
main/include/application/settings/: impl.h  impl_types.h  impl_utils.h
main/include/application/wifiman/: impl.h  impl_types.h  impl_utils.h
main/include/apps/hello_world/: hello_world.h
main/include/composition/main/: application.h  config.h  driver.h  infrastructure.h  launcher.h  preloaded.h  presentation.h  types.h  utils.h
main/include/core/: core.h  handle.h  interface.h  peripheral.h  service.h
main/include/domain/models/: error.h  ethernet.h  log.h  logger.h  messaging.h  network.h  preloaded.h  system.h  update.h  wifi.h
main/include/domain/usecases/: netif.h  ota.h  settings.h  wifiman.h
main/include/haya/: app.h  error.h  log.h
main/include/haya/interface/: gpio.h  i2c.h  interface.h  spi.h  twai.h  uart.h
main/include/haya/peripheral/: eth.h  ethernet.h  lfs.h  netif.h  nvs.h  peripheral.h  sd.h  sim.h  wifi.h
main/include/haya/service/: service.h
main/include/presentation/mqtt/: context.h
main/src/: main.c
main/src/application/netif/: impl.c  impl_utils.c
main/src/application/ota/: impl.c  impl_utils.c
main/src/application/settings/: impl.c  impl_utils.c
main/src/application/wifiman/: impl.c  impl_utils.c
main/src/apps/hello_world/: hello_world.c
main/src/composition/main/: application.c  config.c  driver.c  infrastructure.c  launcher.c  preloaded.c  presentation.c  utils.c
main/src/core/: core.c  handle.c  interface.c  peripheral.c  service.c
main/src/domain/models/: error.c
main/src/haya/: app.c  error.c  log.c
main/src/haya/interface/: gpio.c  i2c.c  spi.c  twai.c  uart.c
main/src/haya/peripheral/: eth.c  lfs.c  netif.c  nvs.c  sd.c  sim.c  wifi.c
main/src/presentation/mqtt/: context.c
(+188 files in other folders)
