file(
    GLOB_RECURSE srcs
    CONFIGURE_DEPENDS
    "src/*.c"
    "src/*.cpp"
)

idf_component_register(
    SRCS 
        "main.c"
        ${srcs}
    INCLUDE_DIRS
        "include"
    PRIV_REQUIRES
        # built-in
        freertos
        spi_flash
        nvs_flash
        driver
        bt
        esp_timer
        esp_driver_gpio
        esp_driver_i2c
        esp_driver_spi
        esp_driver_sdspi
        sdmmc
        esp_wifi
        esp_eth
        esp_event
        esp_netif
        esp_http_server
        esp_https_ota
        fatfs
        app_update
        mbedtls
        mqtt
        # components
        # idf components
        cjson
        w5500
        littlefs
        esp_websocket_client
)

target_compile_definitions(${COMPONENT_LIB} PRIVATE PROJECT_NAME="${APP_NAME}")
